# agentarena-arbiter

./: .dockerignore  .env.example  .gitignore  .uvignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-and-push-prod.yaml  ci-prod.yaml  ci-staging.yaml  ci.yaml  create-release.yaml  jfrog-stagin.yaml  jfrog-staging.yaml  push-jfrog-staging.yaml  push-jfrog.yaml  release-please.yaml
Demo/: .env.example  .gitignore  Dockerfile  README.md  check_findings.py  docker-compose.yml  pytest.ini  requirements-test.txt  requirements.txt  structured_evaluation_example.py  structured_output_example.py  test_experimental_validation.py  test_with_metrics.py
Demo/Demo/: .env.example
Demo/app/: README.md  config.py  main.py  task_utils.py  types.py
Demo/app/core/: batch_processor.py  category_utils.py  claude_model.py  contract_grouping.py  critic_utils.py  cross_agent_comparison.py  deduplication.py  docs_cache.py  docs_formatter.py  docs_processing.py  evaluation.py  evaluation_experimental.py  final_evaluation.py  finding_deduplication.py  gemini_model.py  openai_model.py  prompt_manager.py  prompt_utils.py  prompts.py  prompts_experimental.py
Demo/app/database/: mongodb_handler.py
Demo/app/models/: finding_db.py  finding_input.py
Demo/app/prompts/: finding_evaluation.yaml
Demo/app/test/: run_tests.py  test_api.py  test_batch_findings.py  test_cache.py  test_cache_refresh.py  test_claude_api.py  test_cross_comparison.py  test_deduplication.py  test_final_evaluation.py  test_finding_deduplication.py  test_max_findings_limit.py  test_process_findings.py  test_sync_mechanism.py  (+1 more)
Demo/tests/: __init__.py  conftest.py
app/: config.py  main.py  task_utils.py
app/core/: __init__.py  claude_model.py  cross_agent_comparison.py  final_evaluation.py  finding_deduplication.py
app/models/: finding_input.py
app/test/: test_claude_api.py  test_max_findings_limit.py  test_process_findings.py
(+34 files in other folders)
