[project]
name = "agent-arena-arbitor"
version = "0.1.0"
description = "AgentArena Arbitor Agent for smart contract vulnerability evaluation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "motor>=3.3.2",
    "pymongo>=4.6.1",
    "langchain>=0.3.21",
    "langchain-anthropic>=0.3.10",
    "langchain-core>=0.3.49",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
]

[tool.black]
line-length = 88
target-version = ['py313'] 