[project]
name = "arbiter-agent"
version = "0.1.0"
description = "An AI agent system for task automation and management"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic_settings",
    "python-dotenv",
    "motor",
    "httpx",
    "langchain",
    "langchain-anthropic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
